--- a/WebUI/Views/Reminder/Create.cshtml
+++ b/WebUI/Views/Reminder/Create.cshtml
@@ -18,8 +18,13 @@
             </div>
             <div class="form-group">
                 <label asp-for="ReminderDateTime" class="control-label"></label>
-                <input asp-for="ReminderDateTime" class="form-control" />
+                <input asp-for="ReminderDateTime" class="form-control" type="datetime-local" />
                 <span asp-validation-for="ReminderDateTime" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Email" class="control-label"></label>
+                <input asp-for="Email" class="form-control" />
+                <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
