--- a/WebUI/Views/Department/Details.cshtml
+++ b/WebUI/Views/Department/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model DepartmentHierarchyAndReminderManagementSystem.Domain.Entities.Department
+﻿@model DepartmentHierarchyAndReminderManagementSystem.WebUI.ViewModels.DepartmentDetailsViewModel
 
 @{
     ViewData["Title"] = "Department Details";
@@ -7,24 +7,51 @@
 <h1>Department Details</h1>
 
 <div>
-    <h4>Department</h4>
+    <h4>@Model.Department.Name</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
+            @Html.DisplayNameFor(model => model.Department.Name)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Name)
+            @Html.DisplayFor(model => model.Department.Name)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Logo)
+            @Html.DisplayNameFor(model => model.Department.Logo)
         </dt>
         <dd class="col-sm-10">
-            <img src="@Model.Logo" alt="@Model.Name" width="50" height="50" />
+            @Html.DisplayFor(model => model.Department.Logo)
+        </dd>
+        <dt class="col-sm-2">
+            Parent Departments
+        </dt>
+        <dd class="col-sm-10">
+            <ul>
+                @foreach (var parent in Model.ParentDepartments)
+                {
+                    <li>@parent.Name</li>
+                }
+            </ul>
+        </dd>
+        <dt class="col-sm-2">
+            Sub Departments
+        </dt>
+        <dd class="col-sm-10">
+            <ul>
+                @foreach (var sub in Model.SubDepartments)
+                {
+                    <li>@sub.Name</li>
+                }
+            </ul>
         </dd>
     </dl>
 </div>
+
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.Department.Id" class="btn btn-primary">Edit</a>
+    <form asp-action="Delete" method="post" onsubmit="return confirm('Are you sure you want to delete this department?');" style="display:inline;">
+        @Html.AntiForgeryToken()
+        <button type="submit" class="btn btn-danger">Delete</button>
+    </form>
+    <a asp-action="Index" class="btn btn-secondary">Back to List</a>
 </div>
