--- a/WebUI/Views/Reminder/Create.cshtml
+++ b/WebUI/Views/Reminder/Create.cshtml
@@ -17,6 +17,11 @@
                 <span asp-validation-for="Title" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Subject" class="control-label"></label>
+                <input asp-for="Subject" class="form-control" />
+                <span asp-validation-for="Subject" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="ReminderDateTime" class="control-label"></label>
                 <input asp-for="ReminderDateTime" class="form-control" type="datetime-local" />
                 <span asp-validation-for="ReminderDateTime" class="text-danger"></span>
