--- a/WebUI/Views/Reminder/Edit.cshtml
+++ b/WebUI/Views/Reminder/Edit.cshtml
@@ -17,9 +17,19 @@
                 <span asp-validation-for="Title" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Subject" class="control-label"></label>
+                <input asp-for="Subject" class="form-control" />
+                <span asp-validation-for="Subject" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="ReminderDateTime" class="control-label"></label>
-                <input asp-for="ReminderDateTime" class="form-control" />
+                <input asp-for="ReminderDateTime" class="form-control" type="datetime-local" />
                 <span asp-validation-for="ReminderDateTime" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Email" class="control-label"></label>
+                <input asp-for="Email" class="form-control" />
+                <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
